Fixed bug #60569 (Nullbyte truncates Exception $message).